--- a/assignment-2/muglaFilm.html
+++ b/assignment-2/muglaFilm.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Muhammet Reşit Yayla">
+    <meta name="keywords" content="Muğla, resim, yemek, bodrum, deniz, gezi">
+    <meta name="description" content="Muğla Hakkında Bilgiler">
     <title>MUĞLA</title>
     <style>
         *{
