Sitede değişiklik yapıldı

--- a/assignment-2/egitim.html
+++ b/assignment-2/egitim.html
@@ -42,10 +42,19 @@
     </header>
     <section>
         <article>
-            <h3>Eğitim</h3>
-            <p>
-                1992’de kurulmuş olan Muğla Sıtkı Koçman Üniversitesi, özellikle 1999 sonrasında, iş insanı Sıtkı Davut Koçman’ın Üniversiteyi kelimenin tam anlamıyla kanatlarının altına almasını takiben göz kamaştırıcı bir hızla gelişmiştir. Yakın geçmişte vefat eden Sıtkı Davut Koçman ve kurucu rektör Ethem Ruhi Fiğlalı (1992-2002)’ nın yönetiminde, evvelce 30 bin nüfuslu küçük ve hareketsiz bir il merkezinden ibaret olan şehir, 20.000’i aşkın öğrencinin oluşturduğu yeni bir topluluğun yerleşmesiyle büyük bir ivme kazanmıştır. Muğla Sıtkı Koçman Üniversitesi her yıl açılan yeni fakülteleri ile daha da büyük bir öğrenci kitlesine hitap edebilir hale gelmiştir ve bu da Muğla'nın Muğla Ovası boyunca yayılmasını ve büyümesini sağlamıştır. Muğla ili çok büyük olmadığından öğrenciler kiralar ve ev bulma konularında sorun yaşayabilmektedirler.
-            </p>
+            <h3>Eğitim</h3>           
+            <table>
+                <tr>
+                    <td>
+                        <img src="http://www.mu.edu.tr/Icerik/Sayfa/bidb.mu.edu.tr/uni1.png" alt="Muğla Sıtkı Koçman Üniversitesi" width="150px">
+                    </td>
+                    <td>
+                        <p>
+                            1992’de kurulmuş olan Muğla Sıtkı Koçman Üniversitesi, özellikle 1999 sonrasında, iş insanı Sıtkı Davut Koçman’ın Üniversiteyi kelimenin tam anlamıyla kanatlarının altına almasını takiben göz kamaştırıcı bir hızla gelişmiştir. Yakın geçmişte vefat eden Sıtkı Davut Koçman ve kurucu rektör Ethem Ruhi Fiğlalı (1992-2002)’ nın yönetiminde, evvelce 30 bin nüfuslu küçük ve hareketsiz bir il merkezinden ibaret olan şehir, 20.000’i aşkın öğrencinin oluşturduğu yeni bir topluluğun yerleşmesiyle büyük bir ivme kazanmıştır. Muğla Sıtkı Koçman Üniversitesi her yıl açılan yeni fakülteleri ile daha da büyük bir öğrenci kitlesine hitap edebilir hale gelmiştir ve bu da Muğla'nın Muğla Ovası boyunca yayılmasını ve büyümesini sağlamıştır. Muğla ili çok büyük olmadığından öğrenciler kiralar ve ev bulma konularında sorun yaşayabilmektedirler.
+                        </p>
+                    </td>
+                </tr>
+            </table>
         </article>
         <article>
             <hr>
