--- a/assignment-2/gezilecekYerler.html
+++ b/assignment-2/gezilecekYerler.html
@@ -42,37 +42,42 @@
     </header>
     <section>
         <article>
-            <ol>
-                <li>Dalaman Çayı</li>
-                <li>Saklıkent Koyu</li>
-                <li>Gökçeler Kanyonu Ve İncirliin Mağarası</li>
-                <li>Turgut Şelalesi</li>
-                <li>Güvercinlik</li>
-                <li>Hisarönü</li>
-                <li>Bodrum</li>
-                <li>Marmaris</li>
-                <li>Fethiye</li>
-                <li>Gümbet</li>
-                <li>Karia Yolu (Karya Yolu) </li>
-                <li>Azmak Nehri</li>
-                <li>Kızkumu Plajı</li>
-                <li>Azmak Nehri</li>
-                <li>Zeki Müren Sanat Müzesi</li>
-                <li>Kumluk Plajı</li>
-                <li>Faralya Köyü</li>
-                <li>Çökertme Koyu</li>
-                <li>Tlos Antik Kenti</li>
-                <li>İncekum Plajı</li>
-                <li>Amos Antik Kenti ve Amos Koyu</li>
-                <li>Turunç Koyu</li>
-                <li>Karaincir Koyu</li>
-                <li>Boncuk Koyu</li>
-                <li>Taşlık Plajı</li>
-                <li>Kazıklı Köyü</li>
-                <li>Dalyan Kral Mezarları</li>
-                <li>Belcekız Plajı</li>
-                <li>Bayır Köyü</li>
-            </ol>
+            <h3>
+                <ol>
+                    <li>Dalaman Çayı</li>
+                    <img src="https://yigm.ktb.gov.tr/Resim/9552,akarsuraftingdalaman2jpg.png?0" alt="Dalaman Çayı" title="Dalaman Çayı">
+                    <li>Saklıkent Kanyonu</li>
+                    <img src="https://i.neredekal.com/i/neredekal/75/690x404/6071bd2c026e2541550fcd40" alt="Saklıkent Kanyonu" title="Saklıkent Kanyonu" width="600px">
+                    <li>Gökçeler Kanyonu Ve İncirliin Mağarası</li>
+                    <img src="http://www.milas.gov.tr/kurumlar/milas.gov.tr/milas-tarihi-ve-tanitim-fotograflari/incirliin-magarasi/77c9211.jpg" alt="Gökçeler Kanyonu Ve İncirliin Mağarası" width="600px">
+                    <li>Turgut Şelalesi</li>
+                    <li>Güvercinlik</li>
+                    <li>Hisarönü</li>
+                    <li>Bodrum</li>
+                    <li>Marmaris</li>
+                    <li>Fethiye</li>
+                    <li>Gümbet</li>
+                    <li>Karia Yolu (Karya Yolu) </li>
+                    <li>Azmak Nehri</li>
+                    <li>Kızkumu Plajı</li>
+                    <li>Azmak Nehri</li>
+                    <li>Zeki Müren Sanat Müzesi</li>
+                    <li>Kumluk Plajı</li>
+                    <li>Faralya Köyü</li>
+                    <li>Çökertme Koyu</li>
+                    <li>Tlos Antik Kenti</li>
+                    <li>İncekum Plajı</li>
+                    <li>Amos Antik Kenti ve Amos Koyu</li>
+                    <li>Turunç Koyu</li>
+                    <li>Karaincir Koyu</li>
+                    <li>Boncuk Koyu</li>
+                    <li>Taşlık Plajı</li>
+                    <li>Kazıklı Köyü</li>
+                    <li>Dalyan Kral Mezarları</li>
+                    <li>Belcekız Plajı</li>
+                    <li>Bayır Köyü</li>
+                </ol>
+            </h3>                     
         </article>
         <article>
             <hr>
