--- a/assignment-2/hakkimizda.html
+++ b/assignment-2/hakkimizda.html
@@ -11,11 +11,23 @@
     <style>
         *{
             /* background-color: aquamarine; */
+            /* color: white; */
+        }
+        /* body{
+            background-image: url(https://www.manzara.gen.tr/w1/dalgak%C4%B1ran-koyu-foto%C4%9Fraflar%C4%B1.jpg);
+             background-repeat: no-repeat; 
+            background-position: center 0px;
+            background-size: contain;
+        } */
+        nav{
+            background-image: url(https://www.manzara.gen.tr/w1/dalgak%C4%B1ran-koyu-foto%C4%9Fraflar%C4%B1.jpg);
+            background-size: cover;
         }
         header nav ul li a{
             text-decoration: none;
+            color: white;
         }
-        nav h1{
+        h1{
             background-color: rgb(90, 150, 173);
         }
     </style>
@@ -35,13 +47,14 @@
                 <li><a href="plajVeKoy.html">EN GÜZEL PLAJ VE KOYLARI</a></li>  
                 <li><a href="iletisim.html">İLETİŞİM</a></li> 
             </ul>
-            <hr>
-            <center><h1>MUĞLA HAKKINDA</h1></center>
-            <hr>
+            
         </nav>
     </header>
     <section>
         <article>
+            <hr>
+            <center><h1>MUĞLA HAKKINDA</h1></center>
+            <hr>
             <p>
                 Ege Bölgesinin güneyinde yer alan Muğla, Asar dağı eteklerinde ovaya doğru yayılmış, kendine has mimarisi, daracık sokakları ve herbiri turizm merkezi ilçeleri ile tam bir turizm cennetidir.
             </p>
