--- a/assignment-2/iletisim.html
+++ b/assignment-2/iletisim.html
@@ -42,13 +42,17 @@
     </header>
     <section>
         <article>
+        <center>
             <a href="mailto:mugla@hotmail.com">Mail yoluyla bize ulaşın:</a> mugla@hotmail.com
             <br>
             <a href="tel:05555555555">Bizi arayın :</a> 05555555555
+        </center>
             <br><br>
         </article>
         <article>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25420.661804051408!2d28.364296999999997!3d37.210139399999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bf7209b16cf6bf%3A0xfba529d61c7ac1c1!2zTXXEn2xhLCA0ODAwMCBNZW50ZcWfZS9NdcSfbGE!5e0!3m2!1str!2str!4v1666011539625!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <center>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25420.661804051408!2d28.364296999999997!3d37.210139399999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bf7209b16cf6bf%3A0xfba529d61c7ac1c1!2zTXXEn2xhLCA0ODAwMCBNZW50ZcWfZS9NdcSfbGE!5e0!3m2!1str!2str!4v1666011539625!5m2!1str!2str" width="1200" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </center>
             <hr>
             <p><a href="#sayfabas">Sayfa Başına Dön...</a></p>
         </article>
