--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -46,11 +46,15 @@
                 Muğla ili, Türkiye Cumhuriyeti'nin Ege Bölgesi'ne dahil olan, topraklarının küçük bir kısmı <a href="#akdeniz">Akdeniz Bölgesi</a>  içine giren Ortaca,
                 Dalaman, Fethiye, Marmaris, Datça ve Bodrum gibi tatil bölgeleri ile ünlü ildir.
             </p>    
+            <center>
             <img src="https://www.gezipedia.net/uploads/posts/2020-03/1583917889_fethiye-gezilecek-yerler.jpg" alt="Muğla" title="Muğla" width="700px">
             <img src="https://i2.milimaj.com/i/milliyet/75/0x410/5eb837c85542801d30e42147.jpg" alt="Muğla" title="Muğla" width="600px">
+            </center>
         </article>
         <article>
+            <center>
             <img id="akdeniz" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Latrans-Turkey_location_Mediterranean_Region.svg/480px-Latrans-Turkey_location_Mediterranean_Region.svg.png" alt="Muğla" title="Muğla">
+            </center>
             <hr>
             <p><a href="#sayfabas">Sayfa Başına Dön...</a></p>
         </article>
