--- a/assignment-2/muglaFilm.html
+++ b/assignment-2/muglaFilm.html
@@ -42,7 +42,7 @@
     </header>
     <section>
         <article>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/WYl09sztsJ4" title="Muğla Tanıtım Videosu" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <center><iframe width="560" height="315" src="https://www.youtube.com/embed/WYl09sztsJ4" title="Muğla Tanıtım Videosu" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         </article>
         <article>
             <hr>
